# FlipNote-VITA

./: CMakeLists.txt
.github/workflows/: build.yml
src/: animation.c  animation.h  audio.c  audio.h  colors.h  drawing.c  drawing.h  filemanager.c  filemanager.h  input.c  input.h  main.c  ui.c  ui.h
